# Basic-Interpreter-2024

./: .gitignore  Basic-Demo-64bit  CMakeLists.txt  README.md  score.cpp  testcode
.cache/clangd/index/: Basic.cpp.C01712B7783A9DA9.idx  error.cpp.EE0A679FECB9B6C3.idx  error.hpp.18982625B62AA89C.idx  evalstate.cpp.6428955D1C728215.idx  evalstate.hpp.E5F8A4CF331A1B85.idx  exp.cpp.F06A632B57E248B4.idx  exp.hpp.1ED313E354CAC509.idx  parser.cpp.8CB7C2C0F3B5E195.idx  parser.hpp.87556B9F9B67BA45.idx  program.cpp.58AD1FB748418156.idx  program.hpp.332C77A543C905AB.idx  statement.cpp.0574A738D3B7B5B7.idx  statement.hpp.D33ACA2A93C03023.idx  strlib.cpp.A3B72F18D58B10ED.idx  strlib.hpp.A70AF311ED2F7A29.idx  tokenScanner.cpp.0675592CA5673BA0.idx  tokenScanner.hpp.3667BF896F22B489.idx
Basic/: Basic.cpp  evalstate.cpp  evalstate.hpp  exp.cpp  exp.hpp  parser.cpp  parser.hpp  program.cpp  program.hpp  statement.cpp  statement.hpp
Basic/Utils/: error.cpp  error.hpp  strlib.cpp  tokenScanner.cpp  tokenScanner.hpp
Bonus/.cache/clangd/index/: EvalVisitor.h.556B16D66F227A03.idx  ExprLexer.cpp.C914E4DDBF61ED2B.idx  ExprLexer.h.453A1A6504B3CD4C.idx  ExprParser.cpp.38DA189E69AC286D.idx  ExprParser.h.69A8A54D095B43AB.idx  ExprVisitor.cpp.AA69975EC690ACD1.idx  ExprVisitor.h.29C92C50F22BCEED.idx  main.cpp.FAF798D6F752A273.idx
Bonus/Calculator/: CMakeLists.txt  EvalVisitor.h  README.md  main.cpp
Bonus/Calculator/src/: Expr.g4  Expr.interp  ExprLexer.cpp  ExprLexer.h  ExprLexer.interp  ExprLexer.tokens  ExprParser.cpp  ExprParser.h  ExprVisitor.h
Bonus/Calculator/testcases/: example.in
Test/: trace99.txt
testcode.dSYM/Contents/Resources/DWARF/: testcode
testcode.dSYM/Contents/Resources/Relocations/aarch64/: testcode.yml
