cmake_minimum_required(VERSION 3.22)

set(CMAKE_CXX_STANDARD 20)
project(Calculator)

include_directories(/usr/include/antlr4-runtime)

include_directories(src)

add_executable(code
        src/ExprLexer.h
        src/ExprLexer.cpp
        src/ExprParser.h
        src/ExprParser.cpp
        src/ExprVisitor.h
        src/ExprVisitor.cpp
        EvalVisitor.h
        main.cpp
)

target_link_libraries(code antlr4-runtime)